[package]
name = "ow_my_eyes"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
crossbeam = "0.8.4"
futures-intrusive = "0.5.0"
game-loop = { version = "1.1.0", features = ["winit"] }
humantime = "2.1.0"
indicatif = "0.17.8"
rand = "0.8.5"
smol = "2.0.0"
strum = { version = "0.26.2", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.19.3"
winit = "0.29.15"


[lib]
crate-type = ["rlib"]
name = "ow_my_lib"

[[bin]]
name = "ow_my_eyes"
path = "src/main.rs"
test = false
bench = false
