[package]
name = "ow_my_eyes"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
game-loop = { version = "1.1.0", features = ["winit"] }
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.19.3"
winit = "0.29.15"
cfg-if = "1"
bytemuck = "1.15.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smol = "2.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2"
# we're not in a multithreading context yet (wasm doesn't do threads)
# so this is safe
wgpu = { version = "0.19.3", features = ["fragile-send-sync-non-atomic-wasm"] } 
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
getrandom = { version = "0.2.13", features = ["js"] }

[profile.dev]
opt-level = 1

[lib]
crate-type = ["rlib", "cdylib"]
name = "ow_my_lib"


[[bin]]
name = "ow_my_eyes"
path = "src/main.rs"
test = false
bench = false
